[package]
name = "grid-rs-macros"
version = "0.1.0"
authors = ["ZERO Labs Ltd." , "Ewanretor <ewan@s3n.xyz>"]
license = "MIT"
description = "Macros for the grid-rs crate."
repository = "https://github.com/s3ndotxyz/grid-rs"
publish = true
edition = "2024"

[lib]
name = "grid_rs_macros"
path = "src/lib.rs"
proc-macro = true

[profile.release]
lto = true
opt-level = "z"

[profile.dev]
opt-level = 1

[dependencies]
quote = "1.0.40"
serde_json = "1.0.143"
syn = { version = "2.0.106", features = ["full"] }
